# snmp-sim

./: .coveragerc  .flake8  .gitattributes  .gitignore  .prospector.yaml  ARCHITECTURE_SUMMARY.md  DEFAULT_VALUE_FIXES.md  DROPDOWN_LOCKUP_FIX.md  DROPDOWN_TEST_SUITE.md  LINKS_UI_CHANGES.md  LINKS_UI_GUIDE.md  PLUGIN_ARCHITECTURE.md  SMELL_REVIEW_NOTES.md  TRAP_RECEIVER_STATUS.md  agent_config.yaml  debug_enum.py  file_line_counts_report.tsv  file_sizes_report.tsv  makereqs.py  pyproject.toml  pyproject.toml.bak  pyrightconfig.json  pytest.ini  python_files_over_1000_lines.tsv  python_source_over_1000_lines.tsv  python_tests_over_1000_lines.tsv  reformat_schema_oids.py  requirements.full.txt  requirements.txt  run_agent_with_rest.py  run_trap_receiver.py  run_ui.py  start_with_gui.py  structure.md  sysORTable.csv  temp_ruff.txt  test_agent.py  test_dropdown_strategies.py  test_edit_dialog.py  test_endpoint_table.py  (+18 more)
___compiled-mibs/: CISCO-ALARM-MIB.py  CISCO-SMI.py  CISCO-TC.py  HOST-RESOURCES-MIB.py  HOST-RESOURCES-TYPES.py  IANAifType-MIB.py  IF-MIB.py  SNMPv2-CONF.py  SNMPv2-MIB.py  SNMPv2-SMI.py  SNMPv2-TC.py
__compiled-mibs/: CISCO-ALARM-MIB.py  CISCO-SMI.py  CISCO-TC.py  HOST-RESOURCES-MIB.py  HOST-RESOURCES-TYPES.py  IANAifType-MIB.py  IF-MIB.py  SNMPv2-CONF.py  SNMPv2-MIB.py  SNMPv2-SMI.py  SNMPv2-TC.py
_compiled-mibs/: CISCO-ALARM-MIB.py  CISCO-SMI.py  CISCO-TC.py  HOST-RESOURCES-MIB.py  HOST-RESOURCES-TYPES.py  IANAifType-MIB.py  IF-MIB.py  SNMPv2-CONF.py  SNMPv2-MIB.py  SNMPv2-SMI.py  SNMPv2-TC.py
_mock-behaviour/: CISCO-ALARM-MIB_behaviour.json  HOST-RESOURCES-MIB_behaviour.json  IF-MIB_behaviour.json  SNMPv2-MIB_behaviour.json
app/: README_TYPES.md  __init__.py  api.py  api_config.py  api_debug.py  api_links.py  api_mibs.py  api_shared.py  api_state.py  api_system.py  api_table_helpers.py  api_table_views.py  api_tables.py  api_trap_receiver.py  api_traps.py  app_config.py  app_logger.py  base_type_handler.py  behaviour_plugins.py  behaviour_store.py  cli_bake_state.py  cli_build_model.py  cli_compile_mib.py  cli_load_model.py  cli_mib_to_json.py  cli_model_common.py  cli_preset_manager.py  cli_register_types.py  cli_run_agent.py  cli_schema_upgrade.py  cli_trap_sender.py  compiler.py  default_value_plugins.py  generator.py  generator.py.backup  interface_types.py  json_format.py  mib_builder_adapters.py  mib_dependency_resolver.py  mib_metadata.py  (+30 more)
config/: agent_config.yaml  gui_config.json  gui_config.yaml  snmpd.conf  trap_overrides.json  types.json
docs/: BASE_TYPE_HANDLER.md  BEHAVIOR_SCHEMA_DESIGN.md  COVERAGE_GAPS.md  FLAKE8_FULL_REPO_RESULTS.md  FLAKE8_RESULTS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INTERFACE_REFACTOR_CANDIDATES.md  PYSNMP_TYPE_SOURCING.md  REFACTOR_EXECUTION_CHECKLIST.md  REFACTOR_SIGNALS.md  REFACTOR_TICKETS_TOP10.md  SUPPRESSIONS_AUDIT.md  THREE_FILE_ARCHITECTURE.md  TYPE_ARCHITECTURE_REFACTOR.md  TYPE_RECORDER_TYPING_HARDENING.md  TYPING_HARDENING_PROGRAM.md  VALUE_ENCODING.md  VALUE_LINKING.md  WORKSPACE_TARGET_STATE.md  WRAPPER_MIGRATION_HANDOFF_LOG.md  WRAPPER_SPLIT_MANIFEST.md  WRAPPER_TO_100_CHECKLIST.md  coverage.txt  flake8_full_repo_raw.txt  flake8_full_repo_raw_after_e501_top3.txt  flake8_full_repo_raw_after_ws.txt
examples/: base_type_handler_usage.py
manual-tests/: README.md  debug_trap_source_extract.py  test_trap_receiver_live.py
minimal-for-reference/: QUICK_REFERENCE.py  README_ASYNC_WRAPPER.md  async_wrapper.py  bootstrap_tree_viiew.py  data.json  debug_getnext.py  example_usage.py  minimal_trap_receiver.py  pyproject.toml  quick_verify.py  send_coldstart_trap.py  simple_test.py  table_agent.py  test_async_wrapper.py  test_async_wrapper_integration.py  test_both_clients.py  test_enterprise_mib.py  test_multi_host.py  test_pysnmp7_api.py  test_reused_engine.py  test_sync_functions.py
minimal_for_reference/: README_ASYNC_WRAPPER.md  WORK_SUMMARY.md  __init__.py  async_wrapper.py  bootstrap_tree_viiew.py  debug_getnext.py  example-mib.txt  example_usage.py  minimal_trap_receiver.py  quick_verify.py  simple_test.py  table_agent.py  test_async_wrapper.py  test_async_wrapper_integration.py  test_both_clients.py  test_enterprise_mib.py  test_multi_host.py  test_pysnmp7_api.py  test_reused_engine.py  test_sync_functions.py
plugins/: __init__.py  basic_types.py  date_and_time.py  enum_mib_behaviour.py  snmp_framework.py  type_encoders.py
pysnmp_type_wrapper/: __init__.py  interfaces.py  mib_registrar_runtime_adapter.py  pysnmp_mib_symbols_adapter.py  pysnmp_rfc1902_adapter.py  pysnmp_type_resolver.py  raw_boundary_types.py
retired/: check_enums.py  debug_enum.py  makereqs.py  normalize_state_types.py  refactor_hotspots.py  reformat_schema_oids.py  snmp_type_initializer.py  start_with_gui.py  table_integration_example.py  test_generator_unit.py  trest_generator_unit.py  trest_integration_agent.py  trest_plugins_and_types.py
scripts/: __init__.py  check_all.py  check_wrapper_package_source.sh  check_wrapper_sync.sh  extract_wrapper_repo.sh  fix_missing_docstrings.py  refactor_hotspots.py  test_redundancy_by_isolation.py  test_redundancy_report.py
snmp-wrapper/: DELIVERY.md  PROGRESS.md  QUICK_REFERENCE.md  snmp_wrapper.py  test_wrapper.py
snmp_traps/: __init__.py  trap_receiver.py  trap_receiver_v2.py  trap_sender.py
snmp_wrapper/: DELIVERY.md  PROGRESS.md  README.md  __init__.py  snmp_wrapper.py  test_wrapper.py
tests/: README.md  README_INTEGRATION_TESTS.md  conftest.py  test_agent_errors.py  test_agent_registration.py  test_base_type_handler_more.py  test_basic_models.py  test_cli_compile_mib_unit.py  test_cli_load_model.py  test_cli_register_types.py  test_cli_run_agent.py  test_cli_scripts.py  test_compile_mib.py  test_compiler_unit.py  test_coverage_gaps.py  test_generator_more.py  test_generator_unit.py  test_mib_registrar.py  test_mib_registrar_more.py  test_mib_registry_unit.py  test_mib_to_json.py  test_my_pysnmp_agent.py  test_plugin_loader.py  test_schema_loader.py  test_snmp_agent_additional.py  test_snmp_agent_more.py  test_snmp_agent_unit.py  test_snmp_table_responder.py  (+13 more)
(+172 files in other folders)
