[tool.poetry]
name = "snmp-sim"
version = "0.0.1"
description = "SNMP simulator GUI/agent"
authors = ["Eugene Gill"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
colorama = "^0.4.6"
customtkinter = "^5.2.2"
dynaconf = "^3.2.12"
fastapi = "^0.133.1"
httpcore = "^1.0.9"
httpx = "^0.28.1"
pydantic = "^2.12.5"
pydantic_core = "^2.42.0"
pyasn1 = "^0.6.2"
PyYAML = "^6.0.3"
pysmi = "^1.6.3"
pysnmp = "^7.1.22"
requests = "^2.32.5"
uvicorn = "^0.41.0"
types-requests = "^2.32.4.20260107"
types-pyyaml = "^6.0.12.20250915"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
ignore_missing_imports = false

# Exclude generated, test, and scratch folders anywhere in the tree
exclude = '(^|.*/)(retired|compiled-mibs-test|compiled-mibs|minimal-for-reference|manual-tests|logs|tests|snmp_wrapper)/'

# Ignore missing stubs only for selected third party modules that tend to be untyped.
# Add or remove entries here as you encounter them.
[[tool.mypy.overrides]]
module = [
    "customtkinter.*",
    "dynaconf.*",
    "pysnmp.*",
    "pysmi.*",
    "pyasn1.*",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.coverage.run]
source = ["app", "plugins", "ui"]
branch = true
omit = [
    "tests/**",
    "manual-tests/**",
    "minimal-for-reference/**",
    "compiled-mibs/**",
    "compiled-mibs-test/**",
    "retired/**",
    "logs/**",
    "ui/logs/**",
    "snmp_wrapper/**",
    "**/.venv/**",
    "**/.pyenv/**",
]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    "tests/**",
    "retired/**",
    "compiled-mibs/**",
    "compiled-mibs-test/**",
    "minimal-for-reference/**",
    "manual-tests/**",
    "logs/**",
    "ui/logs/**",
    "snmp_wrapper/**",
    "build/**",
    "dist/**",
    "**/.venv/**",
    "**/.pyenv/**",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # incompatible with D211
    "D213",    # incompatible with D212
    "COM812",  # conflicts with ruff formatter
    "TC003",   # false positive: some runtime-only typing imports
    "C901",    # legacy complexity hotspots tracked separately
    "PLR0912", # legacy branch-count hotspots tracked separately
    "PLR0913", # legacy argument-count hotspots tracked separately
    "FBT001",  # allow bool-typed args in existing legacy APIs
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.pylint.messages_control]
disable = [
    "broad-exception-caught",
    "protected-access",
    "raise-missing-from",
]

[tool.pylint.main]
ignore = ["retired", "compiled-mibs", "compiled-mibs-test", "manual-tests", "tests", "snmp_wrapper"]
ignore-paths = [
    "(^|.*/)retired/.*",
    "(^|.*/)compiled-mibs/.*",
    "(^|.*/)compiled-mibs-test/.*",
    "(^|.*/)manual-tests/.*",
    "(^|.*/)tests/.*",
    "(^|.*/)snmp_wrapper/.*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--ignore=minimal-for-reference",
    "--ignore=compiled-mibs",
    "--ignore=compiled-mibs-test",
    "--ignore=retired",
    "--ignore=manual-tests",
    "--ignore=logs",
    "--ignore=snmp_wrapper",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "**/.venv/**",
    "**/.pyenv/**",
    "tests",
    "compiled-mibs",
    "compiled-mibs-test",
    "retired",
    "minimal-for-reference",
    "manual-tests",
    "logs",
    "ui/logs",
    "snmp_wrapper",
]

[[tool.pyright.executionEnvironments]]
root = "."
pythonVersion = "3.13"

[tool.poetry.group.dev.dependencies]
pyright = ">=1.1.408,<2.0.0"
ruff = ">=0.15.2,<0.16.0"
flake8 = "^7.3.0"
iniconfig = "^2.3.0"
mypy = "^1.19.1"
mypy_extensions = "^1.1.0"
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
pylint = "^4.0.5"
coverage = "^7.13.4"
pytest-cov = "^7.0.0"